@@ -1,3 +1,7 @@
+2021-12-19  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* examples/models_mesh_picking.rb: Added
+
 2021-12-18  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* examples/models_mesh_generation.rb: Added
